# alpha-agencydev

./: .gitmodules  README.md  SETUP.txt  dune  dune-project  routine.sh  tsca-agencydev.opam
agency/: agency_server.ml  available_books.ml  book_intf.ml  dune  tryout-bil.html
agency/apis/: aii_dir.ml  api_directory.ml  bil_commons.ml  dune
agency/email/: base.ml  demo.ml  dune  ses_backend.ml  sign.ml
agency/persistency/: base.ml  demo.ml  dune  dynamo_backend.ml  sign.ml
agency/persistency_tests/: dune  persistency_tests.ml
agency/tests/: dune  http_endpoints.ml
agency_backend/: .gitignore  bridgelib  dune  dune-project  tsca-agency-backend.opam
agency_backend/agency/: agency_server.ml  available_books.ml  dune  tryout-aii.html
agency_backend/agency/tests/: dune  http_endpoints.ml
agency_backend/books/: available_books.ml  book_of_crowdfunding.ml  book_of_frozen.ml  book_of_graveyard.ml  common.ml  dune
agency_backend/jslibs/: aii-tryout.html  aii_jslib.ml  bil_jslib.ml  dune  jsaii.ml  jsutils.ml
agency_backend/jslibs/promise/: dune
agency_backend/models/: agency_types.ml  aii_dir.ml  bil_commons.ml  book_intf.ml  dune
agency_backend/proto_dependent/: dune
agency_backend/proto_dependent/booksdk/: booksdk.ml  dune
agency_backend/proto_dependent/indexer/: dune  indexer.ml  indexer_v0.ml  indexerlib.ml
agency_backend/proto_dependent/tzutils/: dune  new_injection.ml  tuitls2.ml  tznode.ml  tzutils.ml
agency_backend/utils/: commons.ml  dune
bookapps/tmpL1Q6jgUaZeMvDpuw5axKCwYXGUSvX2P/js/compiled/: book-app.js  manifest.edn
bookapps/tmpL1Q7GJiqzmwuS3SkSiWbreXWsxWrk3Y/: default.html
broker/: broker.ml  broker.tz  brokerlib.ml  dune  frozen_wrapped.tz  wrapper.tz
commons/: bcutils.ml  dune  reworked_injection.ml  tznode.ml  tzutils.ml
frozen/: dune  frozen.ml  graveyard.ml
hash_utils/: dune  hash_utils.ml
indexer/: dune  indexer.ml  indexer_v0.ml  indexerlib.ml
jslibs/: aii_jslib.ml  bil_jslib.ml  dune  jsaii.ml  jsutils.ml
proto_pinned/: .gitignore  bridgelib  broker_models  dune  shared_vendors  tsca-proto-pinned.opam
proto_pinned/broker/: bridge.ml  bridge_impl.ml  broker.ml  brokerlib.ml  dune  frozen.tz  rich_utils.ml  tzcrypto.ml  tzutils.ml  utils.ml
proto_pinned/vendors/tezos-006-PsCARTHA-test-helpers/: block.ml
proto_pinned/vendors/tezos-007-PsDELPH1-test-helpers/: error_monad_extensions.ml  incremental.ml  nonce.ml  op.ml
shared_models/: dune  dune-project
shared_models/bridgelib/: bridge_commands.ml  dune  io_style.ml
shared_models/broker_models/: broker_models.ml  dune
vendors/tezos-006-PsCARTHA-test-helpers/: account.mli
vendors/tezos-007-PsDELPH1-test-helpers/: account.ml  assert.ml  block.ml  context.ml  dune
webish/: next.config.js  package.json  secure-server.js
webish/components/: ChainClerk.tsx
webish/models/: AgencyGlobalContext.ts  AiiTypes.ts
webish/pages/: _app.tsx  index.tsx
webish/pages/_tscadev/: backend_intgr_test.tsx
webish/pages/bookapps/bkBookOfCrowdfundingProto0/[sprthash]/: index.tsx
webish/pages/bookapps/bkBookOfFrozenProto0/[sprthash]/: index.tsx
webish/pages/bookapps/bkBookOfGraveyardProto0/[sprthash]/: index.tsx
webish/pages/books/: [bookident].tsx  index.tsx
webish/pages/widgets/sa+cc/ofbook/[bookhash]/[salabel]/: index.tsx
webish/styles/: globals.css
