(lang dune 2.6)
(name tsca-proto-pinned)

(source (github kxcteam/tsca-agency))
(license MIT)
(authors "Haochen Xie")
(maintainers "Haochen Xie <hx@kxc.io>")

(generate_opam_files true)
(package
 (name tsca-proto-pinned)
 (synopsis "TSCA Agency - Protocol-Pinned Portion")
 (version 0.1)
 (depends
  (dune (>= 2.0))
  (lwt (>= 4.0))
  (tls (= 0.11.1))
  (ppxlib (= 0.12.0))
  (tezos-client-base-unix (= 7.4))
  (tezos-client-007-PsDELPH1-commands (= 7.4))))
