(library
 (name booksdk)
 (libraries
   agency_models rich_utils
   typerep ptime kxclib
   digestif
   tezos-crypto
   tezos-client-base-unix
   tezos-client-011-PtHangz2
   tezos-client-011-PtHangz2-commands
   tezos-protocol-011-PtHangz2
   tezos-011-PtHangz2-test-helpers)
 (flags (:standard
          -open Kxclib
          -open Agency_models)))
